<resources>
    <string name="app_name">TeriTOTP</string>
    <string name="company_name">Teri Anric</string>
    <string name="company_description">The application is created by an enthusiast who is passionate about security and privacy. It is open-source, allowing the community to contribute, inspect, and improve the code, ensuring transparency and continuous enhancement.</string>
    <string name="contact_us">Contact Us</string>
    <string name="logo_desc">Company Logo</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="scan_totp_qr_code">Scan TOTP qr code</string>
    <string name="title_activity_otp_info">otp_info</string>

    <string name="delete">DELETE</string>
    <string name="back">Back</string>
    <string name="export_json">Export JSON</string>
    <string name="import_json">Import JSON</string>
</resources>